11: Modify html & js to make consistent w/ other pages

--- a/challenge-11/index-11.html
+++ b/challenge-11/index-11.html
@@ -49,7 +49,7 @@
             <strong>Example: </strong> The result of the array [5, 3, 6, 7, 9] would be 4.
             <br><br>
         </p>
-        <a id="explanation-link" href="#explanation">Click for explanation</a>
+        <a id="explanation-link" href="#explanation">Click for further explanation of example</a>
         <p id="explanation" class="hide">
             <br>
             A jump of 1 creates the jump sequence: 1, 2, 3, 4, 5, etc., meaning it will hit all obstacles.
@@ -64,9 +64,9 @@
         <h3>Array of Integers: [<span id="integer-arr"></span>]</h3>
         <br>
         <form>
-            <label for="num">Array values: </label>
+            <label for="num">Add item to array: </label>
             <br>
-            <input id="num" type="number" placeholder="Input whole number">
+            <input id="num" type="number" placeholder="e.g. 8">
             <button id="submit-num" class="input-width-btn" type="submit">Add to Array</button><br>
         </form>
         <p class="note">*Note: Numbers with decimal places will be rounded down.</p>
