--- a/challenge-18/index-18.html
+++ b/challenge-18/index-18.html
@@ -2,14 +2,47 @@
 <html lang="en">
 
 <head>
-    <title>JavaScriptmas | Day 18</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>JavaScriptmas | Challenge 18</title>
 </head>
 
 <body>
-    <header>
+    <header>        
+        <a href="../challenge-1/index-1.html">1</a>
+        <a href="../challenge-2/index-2.html">2</a>
+        <a href="../challenge-3/index-3.html">3</a>
+        <a href="../challenge-4/index-4.html">4</a>
+        <a href="../challenge-5/index-5.html">5</a>
+        <a href="../challenge-6/index-6.html">6</a>
+        <a href="../challenge-7/index-7.html">7</a>
+        <a href="../challenge-8/index-8.html">8</a>
+        <a href="../challenge-9/index-9.html">9</a>
+        <a href="../challenge-10/index-10.html">10</a>
+        <a href="../challenge-11/index-11.html">11</a>
+        <a href="../challenge-12/index-12.html">12</a>
+        <a href="../challenge-13/index-13.html">13</a>
+        <a href="../challenge-14/index-14.html">14</a>
+        <a href="../challenge-15/index-15.html">15</a>
+        <a href="../challenge-16/index-16.html">16</a>
+        <a href="../challenge-17/index-17.html">17</a>
+        <a href="index-18.html">18</a>
+        <a href="../challenge-19/index-19.html">19</a>
+        <a href="../challenge-20/index-20.html">20</a>
+        <a href="../challenge-21/index-21.html">21</a>
+        <a href="../challenge-22/index-22.html">22</a>
+        <a href="../challenge-23/index-23.html">23</a>
+        <a href="../challenge-24/index-24.html">24</a>
+    </header>
+    <main>
         <h1>Array Previous Less</h1> 
+        <br>
         <p>
-            Create a new array of integers from your initial array of integers.
+            From your initial array of integers, create a new array of integers.
             <br><br>
             Each integer, <em>i</em>, in your array will be compared with the integers that come before it.
             The last number (from the left) that is smaller than integer <em>i</em> will take integer <em>i's</em> position in a new array.
@@ -17,28 +50,40 @@
             <br><br>
             <strong>Example: </strong>The array [3, 5, 2, 4, 5] will return [-1, 3, -1, 2, 4].
             <br>
-            <strong>Explanation: </strong>
-            <br>
-            - 3 has nothing to the left of it, so -1 takes its place in the returned array.
-            <br>
-            - 5 is larger than 3, so the second integer in the new array is 3. 
-            <br>
-            - There are no integers to the left of 2 that are smaller than it, so -1 takes its place in the new array.
-            <br>
-            - 3 and 2 are both smaller than 4, however, 2 is the last from the left, so 2 is the fourth integer in the new array.
-            <br>
-            - 3, 2 and 4 are all smaller than 5, however, 4 is the last from the left, so 4 is the last integer in the new array.
         </p>
-    </header>
-    <main>
-        <h3>Array of Integers: [<span id="integer-arr"></span>]</h3>
-        <label for="input">Add a value to the array: </label>
         <br>
-        <input id="input" type="number" placeholder="Insert whole number">
-        <button id="submit-input" type="submit">Add to Array</button>
+        <a id="explanation-link" href="#explanation">Click for further explanation on example</a>
         <br><br>
-        <button id="submit" type="submit">New Array</button>
-        <p>*Note: Numbers with decimal places will be rounded down</p>
+        <ul id="explanation" class="hide">
+            <li>
+                3 has nothing to the left of it, so -1 takes its place in the returned array
+            </li>
+            <li>
+                5 is larger than 3, so the second integer in the new array is 3
+            </li>
+            <li>
+                There are no integers to the left of 2 that are smaller than it, so -1 takes its place in the new array
+            </li>
+            <li>
+                3 and 2 are both smaller than 4, however, 2 is the last from the left, so 2 is the fourth integer in the new array
+            </li>
+            <li>
+                3, 2 and 4 are all smaller than 5, however, 4 is the last from the left, so 4 is the last integer in the new array
+            </li>
+        </ul>
+        <br>
+        <h3>Array of Integers: [<span id="integer-arr"></span>]</h3>
+        <br>
+        <form>
+            <label for="input">Add item to the array: </label>
+            <br>
+            <input id="input" type="number" placeholder="e.g. 8">
+            <button id="submit-input" class="input-width-btn" type="submit">Add to Array</button>
+        </form>
+        <p class="note">*Note: Numbers with decimal places will be rounded down</p>
+        <br>
+        <button id="submit" class="input-width-btn" type="submit">Create New Array</button>
+        <br><br><br>
         <h3>New Array: [<span id="new-arr"></span>]</h3>
     </main>
     <script type="text/javascript" src ="assets/js/script-18.js"></script>
