--- a/challenge-21/index-21.html
+++ b/challenge-21/index-21.html
@@ -2,37 +2,80 @@
 <html lang="en">
 
 <head>
-    <title>JavaScriptmas | Day 21</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>JavaScriptmas | Challenge 21</title>
 </head>
 
 <body>
     <header>
-        <h1>Sum of 2</h1> 
-        <p>
-            See whether any two numbers, one from Array 1 and one from Array 2, when summed, result in your inputted sum value. 
-        </p>
+        <a href="../challenge-1/index-1.html">1</a>
+        <a href="../challenge-2/index-2.html">2</a>
+        <a href="../challenge-3/index-3.html">3</a>
+        <a href="../challenge-4/index-4.html">4</a>
+        <a href="../challenge-5/index-5.html">5</a>
+        <a href="../challenge-6/index-6.html">6</a>
+        <a href="../challenge-7/index-7.html">7</a>
+        <a href="../challenge-8/index-8.html">8</a>
+        <a href="../challenge-9/index-9.html">9</a>
+        <a href="../challenge-10/index-10.html">10</a>
+        <a href="../challenge-11/index-11.html">11</a>
+        <a href="../challenge-12/index-12.html">12</a>
+        <a href="../challenge-13/index-13.html">13</a>
+        <a href="../challenge-14/index-14.html">14</a>
+        <a href="../challenge-15/index-15.html">15</a>
+        <a href="../challenge-16/index-16.html">16</a>
+        <a href="../challenge-17/index-17.html">17</a>
+        <a href="../challenge-18/index-18.html">18</a>
+        <a href="../challenge-19/index-19.html">19</a>
+        <a href="../challenge-20/index-20.html">20</a>
+        <a href="index-21.html">21</a>
+        <a href="../challenge-22/index-22.html">22</a>
+        <a href="../challenge-23/index-23.html">23</a>
+        <a href="../challenge-24/index-24.html">24</a>
     </header>
     <main>
+        <h1>Sum of 2</h1> 
+        <br>
+        <p>
+            Check whether any two numbers, one from Array 1 and one from Array 2, when summed, result in your inputted sum value. 
+        </p>
+        <br>
         <h3>Integer Array 1: [<span id="arr1"></span>]</h3>
-        <label for="num1">Add integer to Array 1: </label>
         <br>
-        <input id="num1" type="number" placeholder="Insert whole number">
-        <button id="submit-num1" type="submit">Add to Array 1</button>
+        <form>
+            <label for="num1">Add integer to Array 1: </label>
+            <br>
+            <input id="num1" type="number" placeholder="Insert whole number">
+            <button id="submit-num1" class="input-width-btn" type="submit">Add to Array 1</button>
+        </form>
+        <br>
+        <button id="backspace-arr1" class="backspace input-width-btn" type="submit">Delete Last Item</button>
+        <button id="clear-arr1" class="clear input-width-btn" type="submit">Clear Array 1</button>
         <br><br>
-        <button id="clear-arr1" type="submit">Clear Array 1</button>
-        <br>
         <h3>Integer Array 2: [<span id="arr2"></span>]</h3>
-        <label for="num2">Add integer to Array 2: </label>
         <br>
-        <input id="num2" type="number" placeholder="Insert whole number">
-        <button id="submit-num2" type="submit">Add to Array 2</button>
-        <br><br>
-        <button id="clear-arr2" type="submit">Clear Array 2</button>
-        <br><br>
-        <label for="value">Sum value: </label>
+        <form>
+            <label for="num2">Add integer to Array 2: </label>
+            <br>
+            <input id="num2" type="number" placeholder="Insert whole number">
+            <button id="submit-num2" class="input-width-btn" type="submit">Add to Array 2</button>
+        </form>
         <br>
-        <input id="value" type="number" placeholder="Insert whole number">
-        <button id="submit" type="submit">Check Sums</button>
+        <button id="backspace-arr2" class="backspace input-width-btn" type="submit">Delete Last Item</button>
+        <button id="clear-arr2" class="clear input-width-btn" type="submit">Clear Array 2</button>
+        <br><br>
+        <form>
+            <label for="value">Sum value: </label>
+            <br>
+            <input id="value" type="number" placeholder="Insert whole number">
+            <button id="submit" class="input-width-btn" type="submit">Check Sums</button>
+        </form>
+        <br><br>
         <h3><span id="sum-checker"></span></h3>
     </main>
     <script type="text/javascript" src ="assets/js/script-21.js"></script>
