22: Modify html to edit text

--- a/challenge-22/index-22.html
+++ b/challenge-22/index-22.html
@@ -44,7 +44,7 @@
         <p>
             Create a matrix (an array of integer arrays where each integer array represents a row).
             <br><br>
-            From that matrix, choose a column from which to extract numbers to create a new array (the left-most number is in column 0).
+            From that matrix, choose a column from which to extract numbers to create a new array (the left-most number in an array is in column 0).
         </p>
         <br>
         <h3>Matrix: [<span id="matrix"></span>]</h3>
@@ -61,7 +61,7 @@
         <button id="clear-all" class="clear input-width-btn"type="submit">Clear Matrix</button>
         <br><br>
         <form>
-            <label for="col">Extract columns at index: </label>
+            <label for="col">Extract column: </label>
             <br>
             <input id="col" type="number" placeholder="e.g. 2">
             <button id="submit" class="input-width-btn" type="submit">Extract Columns</button>
