--- a/challenge-24/index-24.html
+++ b/challenge-24/index-24.html
@@ -2,24 +2,65 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="assets/css/style-24.css">
-    <title>JavaScriptmas | Day 24</title>
+    <title>JavaScriptmas | Challenge 24</title>
 </head>
 
 <body>
-    <div class="title">
-        <h1>Test your agility!</h1>
-        <h3>Push the button at the right time to hit the target number (0-100)</h3>
-    </div>
-    <div class="target">
-        <h3>Target Number: </h3> &nbsp;<h3 id="targetNum"></h3>
-    </div>
-    <div class="spin">
-        <h3>Spining Wheel: </h3> &nbsp;<h3 id="spinning"></h3>
-    </div>
-    <button id="buttonPressed">STOP</button>
-    <h4 id="result"></h4>
-    <button id="replay" class="hide">REPLAY</button>
+    <header>
+        <a href="../challenge-1/index-1.html">1</a>
+        <a href="../challenge-2/index-2.html">2</a>
+        <a href="../challenge-3/index-3.html">3</a>
+        <a href="../challenge-4/index-4.html">4</a>
+        <a href="../challenge-5/index-5.html">5</a>
+        <a href="../challenge-6/index-6.html">6</a>
+        <a href="../challenge-7/index-7.html">7</a>
+        <a href="../challenge-8/index-8.html">8</a>
+        <a href="../challenge-9/index-9.html">9</a>
+        <a href="../challenge-10/index-10.html">10</a>
+        <a href="../challenge-11/index-11.html">11</a>
+        <a href="../challenge-12/index-12.html">12</a>
+        <a href="../challenge-13/index-13.html">13</a>
+        <a href="../challenge-14/index-14.html">14</a>
+        <a href="../challenge-15/index-15.html">15</a>
+        <a href="../challenge-16/index-16.html">16</a>
+        <a href="../challenge-17/index-17.html">17</a>
+        <a href="../challenge-18/index-18.html">18</a>
+        <a href="../challenge-19/index-19.html">19</a>
+        <a href="../challenge-20/index-20.html">20</a>
+        <a href="../challenge-21/index-21.html">21</a>
+        <a href="../challenge-22/index-22.html">22</a>
+        <a href="../challenge-23/index-23.html">23</a>
+        <a href="index-24.html">24</a>
+    </header>
+    <main>
+        <div class="title">
+            <h1>Test your agility!</h1>
+            <br>
+            <h3>Push the button at the right time to hit the target number (0-100)</h3>
+        </div>
+        <br>
+        <div class="target">
+            <h3>Target Number: </h3> &nbsp;<h3 id="targetNum"></h3>
+        </div>
+        <br>
+        <div class="spin">
+            <h3>Spining Wheel: </h3> &nbsp;<h3 id="spinning"></h3>
+        </div>
+        <br>
+        <button id="start">START</button>
+        <button id="buttonPressed" class="hide">STOP</button>
+        <br>
+        <h4 id="result"></h4>
+        <br>
+        <button id="replay" class="hide">REPLAY</button>
+    </main>
     <script src="assets/js/script-24.js"></script>
 </body>
 
