--- a/index.html
+++ b/index.html
@@ -5,12 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" src="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style-homepage.css">
     <title>Jessica's JavaScriptmas</title>
 </head>
 
 <body>
-    <img src="assets/images/header.png" height="300" width="400">
+    <header>
+        <button class="challenge-icon"><a href="index-1.html">1</a></button>
+        <button class="challenge-icon"><a href="index-2.html">2</a></button>
+        <button class="challenge-icon"><a href="index-3.html">3</a></button>
+        <button class="challenge-icon"><a href="index-4.html">4</a></button>
+        <button class="challenge-icon"><a href="index-5.html">5</a></button>
+        <button class="challenge-icon"><a href="index-6.html">6</a></button>
+        <button class="challenge-icon"><a href="index-7.html">7</a></button>
+        <button class="challenge-icon"><a href="index-8.html">8</a></button>
+        <button class="challenge-icon"><a href="index-9.html">9</a></button>
+        <button class="challenge-icon"><a href="index-10.html">10</a></button>
+        <button class="challenge-icon"><a href="index-11.html">11</a></button>
+        <button class="challenge-icon"><a href="index-12.html">12</a></button>
+        <button class="challenge-icon"><a href="index-13.html">13</a></button>
+        <button class="challenge-icon"><a href="index-14.html">14</a></button>
+        <button class="challenge-icon"><a href="index-15.html">15</a></button>
+        <button class="challenge-icon"><a href="index-16.html">16</a></button>
+        <button class="challenge-icon"><a href="index-17.html">17</a></button>
+        <button class="challenge-icon"><a href="index-18.html">18</a></button>
+        <button class="challenge-icon"><a href="index-19.html">19</a></button>
+        <button class="challenge-icon"><a href="index-20.html">20</a></button>
+        <button class="challenge-icon"><a href="index-21.html">21</a></button>
+        <button class="challenge-icon"><a href="index-22.html">22</a></button>
+        <button class="challenge-icon"><a href="index-23.html">23</a></button>
+        <button class="challenge-icon"><a href="index-24.html">24</a></button>
+    </header>
+    <img id="homepage-img" src="assets/images/header.png" height="450" width="600">
 </body>
 
 </html>
