Add 'script.js' for general functionality

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <img id="homepage-img" src="assets/images/header.png" height="450" width="600">
+
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
