--- a/index-1.html
+++ b/index-1.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>JavaScriptmas | Challenge 1</title>
 </head>
@@ -65,6 +66,7 @@
         <br>
         <h3>Leftover candies: <span id="leftover">e.g. 3</span></h3>
     </main>
+    <script type="text/javascript" src="assets/js/script.js"></script>
     <script type="text/javascript" src="assets/js/script-1.js"></script>
 </body>
 
