--- a/index-15.html
+++ b/index-15.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style-15.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>JavaScriptmas | Challenge 15</title>
@@ -55,6 +55,7 @@
             <img src="assets/images/challenge-15/next.svg" id="next" alt="next image">
         </div>
     </main>
+    <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="assets/js/script-15.js"></script>
 </body>
 
