--- a/index-19.html
+++ b/index-19.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>JavaScriptmas | Challenge 19</title>
 </head>
@@ -42,7 +42,7 @@
         <h1>Alphabet Subsequence</h1> 
         <br>
         <p>
-            Input a string to validate it against the following criteria:
+            Input a string to validate it against the following criteria.
             <br><br>
             <strong>String criteria:</strong>
             <ol>
@@ -61,6 +61,7 @@
         <br><br>
         <h3><span id="validator"></span></h3>
     </main>
+    <script type="text/javascript" src="assets/js/script.js"></script>
     <script type="text/javascript" src ="assets/js/script-19.js"></script>
 </body>
     
