Number all html h1 headings, edit challenge 8 & 24 text

--- a/index-10.html
+++ b/index-10.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Adjacent Elements Product</h1>
+        <h1>10. Adjacent Elements Product</h1>
         <br>
         <p>
             Create an array of numbers. All adjacent numbers in your array will be multiplied and the largest product will be returned.
