--- a/index-11.html
+++ b/index-11.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Avoid Obstacles</h1>  
+        <h1>11. Avoid Obstacles</h1>  
         <br>      
         <p>
             Create an array of integers. Each number in your array represents the coordinates of an obstacle on a straight line.
