--- a/index-12.html
+++ b/index-12.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Valid Time</h1> 
+        <h1>12. Valid Time</h1> 
         <br>
         <p>
             Check whether a time is valid on the 24-hr clock.
