--- a/index-13.html
+++ b/index-13.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Extract Each Kth</h1> 
+        <h1>13. Extract Each Kth</h1> 
         <br>
         <p>
             Create an array of numbers. Specify 'k' to extract every kth number from your array.
