--- a/index-14.html
+++ b/index-14.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Maximal Adjacent Difference</h1> 
+        <h1>14. Maximal Adjacent Difference</h1> 
         <br>
         <p>
             Find the maximal difference of adjacent numbers in your array.
