--- a/index-15.html
+++ b/index-15.html
@@ -40,7 +40,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Carousel</h1>
+        <h1>15. Carousel</h1>
         <div class="container">
             <img src="assets/images/challenge-15/previous.svg" id="previous" class="disabled" alt="previous image">
             <div class="gallery-wrapper">
