--- a/index-16.html
+++ b/index-16.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Insert Dashes</h1> 
+        <h1>16. Insert Dashes</h1> 
         <br>
         <p>
             Type in anything to add dashes between characters. 
