--- a/index-17.html
+++ b/index-17.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Different Symbols Naive</h1> 
+        <h1>17. Different Symbols Naive</h1> 
         <br>
         <p>
             Type in anything to count the number of unique characters in your string. 
