--- a/index-18.html
+++ b/index-18.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Array Previous Less</h1> 
+        <h1>18. Array Previous Less</h1> 
         <br>
         <p>
             From your initial array of integers, create a new array of integers.
