--- a/index-2.html
+++ b/index-2.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Deposit Profit</h1>
+        <h1>2. Deposit Profit</h1>
         <br>
         <p>
             Find out how many years it will take for a certain amount of money (deposit) to reach a certain threshold given an annual interest rate.
