--- a/index-20.html
+++ b/index-20.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Domain Type</h1> 
+        <h1>20.Domain Type</h1> 
         <br>
         <p>
             Create an array of website URLs and find out their domain types. 
