--- a/index-21.html
+++ b/index-21.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Sum of 2</h1> 
+        <h1>21. Sum of 2</h1> 
         <br>
         <p>
             Check whether any two numbers, one from Array 1 and one from Array 2, when summed, result in your inputted sum value. 
