--- a/index-22.html
+++ b/index-22.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Extract Matrix Column</h1>
+        <h1>22. Extract Matrix Column</h1>
         <br>
         <p>
             Create a matrix (an array of integer arrays where each integer array represents a row).
