--- a/index-23.html
+++ b/index-23.html
@@ -40,7 +40,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Social Media Input</h1>
+        <h1>23. Social Media Input</h1>
         <br>
         <div class="container">
             <textarea type="text" id="string" placeholder="Type in the box"></textarea>
