--- a/index-24.html
+++ b/index-24.html
@@ -41,9 +41,9 @@
     </header>
     <main>
         <div class="title">
-            <h1>Test your agility!</h1>
+            <h1>24. Test your agility</h1>
             <br>
-            <h3>Push the button at the right time to hit the target number (0-100)</h3>
+            <p>Push the button at the right time to hit the target number (0-100)</p>
         </div>
         <br>
         <div class="target">
