--- a/index-3.html
+++ b/index-3.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Chunky Monkey</h1>
+        <h1>3. Chunky Monkey</h1>
         <br>
         <p>
             Create an initial array of items (numbers, characters, words, and sentences are all acceptable array items).
