--- a/index-4.html
+++ b/index-4.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Century From Year</h1>
+        <h1>4. Century From Year</h1>
         <br>
         <p>
             Input a year (AD) and find out what century it belongs to.
