--- a/index-5.html
+++ b/index-5.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Reverse A String</h1>
+        <h1>5. Reverse A String</h1>
         <br>
         <p>
             Input a string to reverse it. 
