--- a/index-6.html
+++ b/index-6.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Sort By Length</h1>
+        <h1>6. Sort By Length</h1>
         <br>
         <p>
             Create an array and sort it from the shortest to longest item.
