--- a/index-7.html
+++ b/index-7.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Count Vowel Consonant</h1>
+        <h1>7. Count Vowel Consonant</h1>
         <br>
         <p>
             Vowels are worth 1pt and consonants are worth 2pts. Input a string of <em>alphabetic characters</em> to find out its total points.
