--- a/index-8.html
+++ b/index-8.html
@@ -40,7 +40,8 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <div id="dice-number">Click the dice</div>
+        <h1>8. Rolling Dice</h1>
+        <div id="dice-number">Click to roll!</div>
         <div id="dice">
             <div id="top-left" class="dot two three four five six hide"></div>
             <div id="top-right" class="dot four five six hide"></div>
