--- a/index-9.html
+++ b/index-9.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Sum Odd Fibonacci Numbers</h1>
+        <h1>9. Sum Odd Fibonacci Numbers</h1>
         <br>
         <p>
             Odd numbers starting from the beginning of the Fibonacci sequence to equal or less than your inputted number will be summed.
