--- a/index-1.html
+++ b/index-1.html
@@ -40,7 +40,7 @@
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
     <main>
-        <h1>Candies</h1>
+        <h1>1. Candies</h1>
         <br>
         <p>
             Find out how many candies each child receives if a certain number of candies is divided <em>equally</em> amongst them.
