Edit btns to fit responsive screen

--- a/index-10.html
+++ b/index-10.html
@@ -53,7 +53,7 @@
             <label for="num">Add item to array: </label>
             <br>
             <input id="num" type="number" placeholder="e.g. 42">
-            <button id="submit-num" class="input-width-btn" type="submit">Add to Array:</button>
+            <button id="submit-num" type="submit">Add</button>
         </form>
         <br>
         <form>
