--- a/index-11.html
+++ b/index-11.html
@@ -67,7 +67,7 @@
             <label for="num">Add item to array: </label>
             <br>
             <input id="num" type="number" placeholder="e.g. 8">
-            <button id="submit-num" class="input-width-btn" type="submit">Add to Array</button><br>
+            <button id="submit-num" type="submit">Add</button><br>
         </form>
         <p class="note">*Note: Numbers with decimal places will be rounded down.</p>
         <br>
