--- a/index-13.html
+++ b/index-13.html
@@ -51,7 +51,7 @@
             <label for="num">Add value to array: </label>
             <br>
             <input id="num" type="number" placeholder="e.g. 8">
-            <button id="add" class="input-width-btn" type="submit">Add to Array</button>
+            <button id="add" type="submit">Add</button>
             <br><br>
         </form>
         <button id="backspace" class="input-width-btn" type="submit">Delete Last Item</button>
