--- a/index-17.html
+++ b/index-17.html
@@ -49,7 +49,7 @@
             <label for="input">Input anything: </label>
             <br>
             <input id="input" type="text" placeholder="e.g. abbc123">
-            <button id="submit" class="input-width-btn long" type="submit">Count Different Characters</button>
+            <button id="submit" class="extra-wide-btn" type="submit">Count Different Characters</button>
         </form>
         <br><br>
         <h3>Number of different characters: <span id="chars">e.g. 6</span></h3>
