--- a/index-19.html
+++ b/index-19.html
@@ -56,7 +56,7 @@
             <label for="input">Input string: </label>
             <br>
             <input id="input" type="text" placeholder="e.g. validatethis">
-            <button id="submit" class="input-width-btn" type="submit">Validate String</button>
+            <button id="submit" type="submit">Validate</button>
         </form>
         <br><br>
         <h3><span id="validator"></span></h3>
