--- a/index-3.html
+++ b/index-3.html
@@ -52,7 +52,7 @@
             <label for="value-input">Add items to the initial array:</label>
             <br>
             <input id="value-input" type="text" placeholder="e.g. 21 or hello">
-            <button id="submit-values" class="input-width-btn" type="submit">Add to Initial Array</button>
+            <button id="submit-values" type="submit">Add</button>
         </form>
         <br>
         <form>
