--- a/index-6.html
+++ b/index-6.html
@@ -51,7 +51,7 @@
             <label for="string-input">Add an item to the array:</label>
             <br>
             <input id="string-input" type="text" placeholder="e.g. pizza, ice cream">
-            <button id="submit-string" class="input-width-btn" type="submit">Add to Array</button>
+            <button id="submit-string" type="submit">Add</button>
         </form>
         <br>
         <form>
