--- a/index-14.html
+++ b/index-14.html
@@ -53,13 +53,13 @@
             <label for="integer">Add value to array: </label>
             <br>
             <input id="integer" type="number" placeholder="e.g. 8">
-            <button id="add" class="input-width-btn" type="submit">Add to Array</button>
+            <button id="add" type="submit">Add</button>
         </form>
         <br>
         <button id="backspace" class="input-width-btn" type="submit">Delete Last Item</button>
         <button id="clear" class="input-width-btn" type="submit">Clear Array</button>
         <br><br>
-        <button id="submit" class="input-width-btn" type="submit">Find Maximal Difference</button>
+        <button id="submit" class="extra-wide-btn" type="submit">Find Maximal Difference</button>
         <br><br>
         <h3>Maximal adjacent difference: <span id="maximal-diff"></span></h3>
     </main>
