--- a/index-20.html
+++ b/index-20.html
@@ -51,7 +51,7 @@
             <label for="input">Add domain name (website URL): </label>
             <br>
             <input id="input" type="text" placeholder="Insert domain name">
-            <button id="submit-domain" class="input-width-btn" type="submit">Add Domain Name</button>
+            <button id="submit-domain" type="submit">Add</button>
         </form>
         <br>
         <button id="submit" class="input-width-btn" type="submit">Check Domain Type</button>
