20: Add personalised header img to html, link it to homepage

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button class="challenge-icon"><a href="index-23.html">23</a></button>
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
-    <img id="homepage-img" src="assets/images/header.png" height="450" width="600">
+    <img id="homepage-img" src="assets/images/home.png" height="450" width="600">
 
     <script src="assets/js/script.js"></script>
 </body>
