Home: Restructure, add text

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/style-homepage.css">
     <title>Jessica's JavaScriptmas</title>
 </head>
 
 <body>
+    <img id="homepage-img" src="assets/images/home.png" height="390" width="520">
+    <p>
+        I made this website purely for the purpose of practising JavaSript, HTML & CSS.
+        It's based on my solutions to the <a href="https://scrimba.com/learn/adventcalendar" target="_blank">scrimba.com</a> <em>24 days of #JavaScriptmas </em>(2020) challenge.
+    </p>
     <header>
         <button class="challenge-icon"><a href="index-1.html">1</a></button>
         <button class="challenge-icon"><a href="index-2.html">2</a></button>
@@ -39,7 +44,6 @@
         <button class="challenge-icon"><a href="index-23.html">23</a></button>
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
-    <img id="homepage-img" src="assets/images/home.png" height="450" width="600">
 
     <script src="assets/js/script.js"></script>
 </body>
