Add personalised header img to all html files

--- a/index-18.html
+++ b/index-18.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <header>        
+    <header>    
+        <a href="index.html"><img src="assets/images/header.png" height="100px" width="400px" alt="Jessica's JavaScriptmas Challenge"></a>
+        <br><br>    
         <button class="challenge-icon"><a href="index-1.html">1</a></button>
         <button class="challenge-icon"><a href="index-2.html">2</a></button>
         <button class="challenge-icon"><a href="index-3.html">3</a></button>
