18: Edit html to make 'Add to Array' btn smaller

--- a/index-18.html
+++ b/index-18.html
@@ -80,7 +80,7 @@
             <label for="input">Add item to the array: </label>
             <br>
             <input id="input" type="number" placeholder="e.g. 8">
-            <button id="submit-input" class="input-width-btn" type="submit">Add to Array</button>
+            <button id="submit-input" type="submit">Add</button>
         </form>
         <p class="note">*Note: Numbers with decimal places will be rounded down</p>
         <br>
