22: Edit html to make 'Add to Matrix' btn smaller

--- a/index-22.html
+++ b/index-22.html
@@ -55,7 +55,7 @@
             <label for="arr">Add an integer array to the matrix: </label>
             <br>
             <input id="arr" type="string" placeholder="e.g. 1,2,61,23,43,0">
-            <button id="submit-arr" class="input-width-btn" type="submit">Add to Matrix</button>
+            <button id="submit-arr" type="submit">Add</button>
         </form>
         <p class="note">*Note: Separate integers by a comma (no space)</p>
         <br>
@@ -66,7 +66,7 @@
             <label for="col">Extract column: </label>
             <br>
             <input id="col" type="number" placeholder="e.g. 2">
-            <button id="submit" class="input-width-btn" type="submit">Extract Columns</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Extract Columns</button>
         </form>
         <br><br>
         <h3>Extracted integers from matrix columns: [<span id="extracted-arr"></span>]</h3>
