24: Modify html to edit btn text

--- a/index-24.html
+++ b/index-24.html
@@ -56,12 +56,12 @@
             <h3>Spining Wheel: </h3> &nbsp;<h3 id="spinning"></h3>
         </div>
         <br>
-        <button id="start">START</button>
-        <button id="buttonPressed" class="hide">STOP</button>
+        <button id="start">Start</button>
+        <button id="buttonPressed" class="hide">Stop</button>
         <br>
         <h4 id="result"></h4>
         <br>
-        <button id="replay" class="hide">REPLAY</button>
+        <button id="replay" class="hide">Replay</button>
     </main>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="assets/js/script-24.js"></script>
