Add result-btn class to btns in html files

--- a/index-1.html
+++ b/index-1.html
@@ -59,7 +59,7 @@
             <br>
             <input id="candy-input" type="number" placeholder="e.g. 23">
             <br><br>
-            <button id="submit" class="input-width-btn" type="submit">Submit</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Submit</button>
         </form>
         <br><br>
         <h3>Each child receives: <span id="portion">e.g. 4 candies</span></h3>
