--- a/index-10.html
+++ b/index-10.html
@@ -59,7 +59,7 @@
         </form>
         <br>
         <form>
-            <button id="submit" class="input-width-btn" type="submit">Find Largest Product</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Find Largest Product</button>
         </form>
         <br><br>
         <h3>Largest product: <span id="largest-product"></span></h3>
