--- a/index-11.html
+++ b/index-11.html
@@ -74,7 +74,7 @@
         <p class="note">*Note: Numbers with decimal places will be rounded down.</p>
         <br>
         <form>
-            <button id="submit" class="input-width-btn" type="submit">Find Smallest Jump</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Find Smallest Jump</button>
         </form>
         <br><br>
         <h3>Smallest jump to avoid all obstacles: <span id="jump"></span></h3>
