--- a/index-12.html
+++ b/index-12.html
@@ -51,7 +51,7 @@
             <label for="time">Input 24-hr time: </label>
             <br>
             <input id="time" type="string" placeholder="e.g. 23:21">
-            <button id="submit" type="submit">Validate</button>
+            <button id="submit" class="result-btn" type="submit">Validate</button>
         </form>
         <p class="note">*Note: Input should be in the format: 00:00</p>
         <br><br>
