--- a/index-13.html
+++ b/index-13.html
@@ -64,7 +64,7 @@
             <br>
             <input id="k" type="number" placeholder="e.g. 2">
             <br><br>
-            <button id="submit" class="input-width-btn" type="submit">Extract Numbers</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Extract Numbers</button>
         </form>
         <br><br>
         <h3>New array: [<span id="extracted-array"></span>]</h3>
