--- a/index-14.html
+++ b/index-14.html
@@ -61,7 +61,7 @@
         <button id="backspace" class="input-width-btn" type="submit">Delete Last Item</button>
         <button id="clear" class="input-width-btn" type="submit">Clear Array</button>
         <br><br>
-        <button id="submit" class="extra-wide-btn" type="submit">Find Maximal Difference</button>
+        <button id="submit" class="extra-wide-btn result-btn" type="submit">Find Maximal Difference</button>
         <br><br>
         <h3>Maximal adjacent difference: <span id="maximal-diff"></span></h3>
     </main>
