--- a/index-16.html
+++ b/index-16.html
@@ -51,7 +51,7 @@
             <label for="input">Input anything: </label>
             <br>
             <input id="input" type="text" placeholder="e.g. Hi there">
-            <button id="submit" class="input-width-btn" type="submit">Add Dashes</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Add Dashes</button>
         </form>
         <p class="note">*Note: Adjacent spaces will be converted to one space</p>
         <br><br>
