--- a/index-19.html
+++ b/index-19.html
@@ -58,7 +58,7 @@
             <label for="input">Input string: </label>
             <br>
             <input id="input" type="text" placeholder="e.g. validatethis">
-            <button id="submit" type="submit">Validate</button>
+            <button id="submit" class="result-btn" type="submit">Validate</button>
         </form>
         <br><br>
         <h3><span id="validator"></span></h3>
