--- a/index-2.html
+++ b/index-2.html
@@ -60,7 +60,7 @@
             <br>
             <input id="threshold-input" type="number" placeholder="Ex: 170">
             <br><br>
-            <button id="submit" class="input-width-btn" type="submit">Submit</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Submit</button>
         </form>
         <br><br>
         <h3>Years to reach threshold: <span id="years">e.g. 3</span></h3>
