--- a/index-20.html
+++ b/index-20.html
@@ -56,7 +56,7 @@
             <button id="submit-domain" type="submit">Add</button>
         </form>
         <br>
-        <button id="submit" class="input-width-btn" type="submit">Check Domain Type</button>
+        <button id="submit" class="input-width-btn result-btn" type="submit">Check Domain Type</button>
         <br><br><br>
         <h3>Domain name types: [<span id="type-arr"></span>]</h3>
     </main>
