--- a/index-21.html
+++ b/index-21.html
@@ -75,7 +75,7 @@
             <label for="value">Sum value: </label>
             <br>
             <input id="value" type="number" placeholder="Insert whole number">
-            <button id="submit" class="input-width-btn" type="submit">Check Sums</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Check Sums</button>
         </form>
         <br><br>
         <h3><span id="sum-checker"></span></h3>
