--- a/index-3.html
+++ b/index-3.html
@@ -62,7 +62,7 @@
             <br>
             <input id="size-input" type="number" placeholder="e.g. 3">
             <br><br>
-            <button id="submit" class="input-width-btn" type="submit">Create New Array</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Create New Array</button>
         </form>
         <br><br>
         <h3>New Two-Dimensional Array: [<span id="2d-array"></span>]</h3>
