--- a/index-4.html
+++ b/index-4.html
@@ -51,7 +51,7 @@
             <label for="number-input">Year:</label>
             <br>
             <input id="number-input" type="number" placeholder="e.g. 1756">
-            <button id="submit" type="submit">Submit</button>
+            <button id="submit" class="result-btn" type="submit">Submit</button>
         </form>
         <br>
         <h3>Century: <span id="century">e.g. 18th</span></h3>
