--- a/index-5.html
+++ b/index-5.html
@@ -51,7 +51,7 @@
             <label for="string-input">Input a string:</label>
             <br>
             <input id="string-input" type="text" placeholder="e.g. Hi, I'm Jess">
-            <button id="submit" type="submit">Submit</button>
+            <button id="submit" class="result-btn" type="submit">Submit</button>
         </form>
         <br><br>
         <h3>Reversed String: <span id="reversed-string">e.g. sseJ m'I ,iH</span></h3>
