--- a/index-6.html
+++ b/index-6.html
@@ -57,7 +57,7 @@
         </form>
         <br>
         <form>
-            <button id="submit" class="input-width-btn" type="submit">Sort Array</button>
+            <button id="submit" class="input-width-btn result-btn" type="submit">Sort Array</button>
         </form>
         <br><br>
         <h3>Sorted Array: [<span id="sorted-array"></span>]</h3>
