--- a/index-7.html
+++ b/index-7.html
@@ -53,7 +53,7 @@
             <label for="string-input">Insert string: </label>
             <br>
             <input id="string-input" type="text" placeholder="e.g. howmanypoints">
-            <button id="submit" type="submit">Score</button>
+            <button id="submit" class="result-btn" type="submit">Score</button>
         </form>
         <br><br>
         <h3>Total Points: <span id="sum">e.g. 22</span></h3>
