--- a/index-18.html
+++ b/index-18.html
@@ -84,7 +84,7 @@
         </form>
         <p class="note">*Note: Numbers with decimal places will be rounded down</p>
         <br>
-        <button id="submit" class="input-width-btn" type="submit">Create New Array</button>
+        <button id="submit" class="input-width-btn result-btn" type="submit">Create New Array</button>
         <br><br><br>
         <h3>New Array: [<span id="new-arr"></span>]</h3>
     </main>
