--- a/index-9.html
+++ b/index-9.html
@@ -53,7 +53,7 @@
             <label for="num">Maximum Fibonacci Number: </label>
             <br>
             <input id="num" type="number" placeholder="e.g. 10">
-            <button id="submit" type="submit">Sum</button>
+            <button id="submit" class="result-btn" type="submit">Sum</button>
         </form>
         <br><br>
         <h3>Fibonacci Sequence: <span id="sequence">e.g. 1,1,2,3,5,8</span></h3>
