Home: Modify html to edit text

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 </head>
 
 <body>
-    <img id="homepage-img" src="assets/images/home.png" height="390" width="520">
+    <img id="homepage-img" src="assets/images/home.png" height="360" width="480">
     <p>
-        I made this website purely for the purpose of practising JavaSript, HTML & CSS.
+        <span>Welcome to my JavaScriptmas 2020 website!</span>
+        <br><br>
+        This website was created purely for JavaSript, HTML & CSS practice.
         It's based on my solutions to the <a href="https://scrimba.com/learn/adventcalendar" target="_blank">scrimba.com</a> <em>24 days of #JavaScriptmas </em>(2020) challenge.
+        <br><br>
+        Click the buttons below to view each challenge.
     </p>
     <header>
         <button class="challenge-icon"><a href="index-1.html">1</a></button>
