Home/JS: Add imgs, render w/ js

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 <body>
     <img id="homepage-img" src="assets/images/home.png" height="360" width="480">
+    <img id="speech1" class="speech hide" src="assets/images/speech-1.png" height="150" width="250">
+    <img id="speech2" class="speech hide" src="assets/images/speech-2.png" height="150" width="250">
+    <img id="speech3" class="speech hide" src="assets/images/speech-3.png" height="150" width="250">
+    <img id="speech4" class="speech hide" src="assets/images/speech-4.png" height="150" width="250">
+
     <p>
         <span>Welcome to my JavaScriptmas 2020 website!</span>
         <br><br>
