--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <p>
         <span>Welcome to my JavaScriptmas 2020 website!</span>
         <br><br>
-        This website was created purely for JavaSript, HTML & CSS practice.
-        It's based on my solutions to the <a href="https://scrimba.com/learn/adventcalendar" target="_blank">scrimba.com</a> <em>24 days of #JavaScriptmas </em>(2020) challenge.
+        As a beginner to coding, this website was created purely for JavaSript, HTML & CSS practice.
+        Each page is based on my solutions to the <a href="https://scrimba.com/learn/adventcalendar" target="_blank">scrimba.com</a> <em>24 days of #JavaScriptmas </em>(2020) challenge.
         <br><br>
         Click the buttons below to view each challenge.
     </p>
