--- a/index-1.html
+++ b/index-1.html
@@ -8,6 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous"
+    />  
     <link rel="stylesheet" href="assets/css/style.css">
     <title>JavaScriptmas | Challenge 1</title>
 </head>
@@ -41,6 +47,7 @@
         <button class="challenge-icon"><a href="index-23.html">23</a></button>
         <button class="challenge-icon"><a href="index-24.html">24</a></button>
     </header>
+
     <main>
         <h1>1. Candies</h1>
         <br>
@@ -68,6 +75,14 @@
         <br>
         <h3>Leftover candies: <span id="leftover">e.g. 3</span></h3>
     </main>
+
+    <div id="next-arrow">
+        <button class="arrow-btn" onclick="window.location.href='index-2.html'">
+            Next
+            <i class="fas fa-chevron-right"></i>
+        </button>
+    </div>
+    
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script type="text/javascript" src="assets/js/script-1.js"></script>
 </body>
