--- a/index-1.html
+++ b/index-1.html
@@ -74,15 +74,15 @@
         <h3>Total candies eaten: <span id="candies">e.g. 20</span></h3>
         <br>
         <h3>Leftover candies: <span id="leftover">e.g. 3</span></h3>
+        <br><hr><br>
+        <div class="next-arrow">
+            <button class="arrow-btn" onclick="window.location.href='index-2.html'">
+                Next
+                <i class="fas fa-chevron-right"></i>
+            </button>
+        </div>
     </main>
 
-    <div id="next-arrow">
-        <button class="arrow-btn" onclick="window.location.href='index-2.html'">
-            Next
-            <i class="fas fa-chevron-right"></i>
-        </button>
-    </div>
-    
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script type="text/javascript" src="assets/js/script-1.js"></script>
 </body>
