--- a/index-3.html
+++ b/index-3.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous"
+    /> 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>JavaScriptmas | Challenge 3</title>
 </head>
@@ -66,6 +72,19 @@
         </form>
         <br><br>
         <h3>New Two-Dimensional Array: [<span id="2d-array"></span>]</h3>
+        <br><hr><br>
+        <div class="arrow-div">
+            <div class="prev-arrow">
+                <button class="arrow-btn" onclick="window.location.href='index-2.html'">
+                    <i class="fas fa-chevron-left"></i> Previous
+                </button>
+            </div>
+            <div class="next-arrow">
+                <button class="arrow-btn" onclick="window.location.href='index-4.html'">
+                    Next <i class="fas fa-chevron-right"></i>
+                </button>
+            </div>
+        </div>
     </main>
     <script src="assets/js/script.js"></script>
     <script type="text/javascript" src="assets/js/script-3.js"></script>
