Modify 'script.js' and separate home page speech bubble code into new file 'script-home.js'

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </header>
 
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/script-home.js"></script>
 </body>
 
 </html>
