Modify html files to add favicon image

--- a/index-15.html
+++ b/index-15.html
@@ -15,6 +15,7 @@
     /> 
     <link rel="stylesheet" href="assets/css/style-15.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.png">
     <title>JavaScriptmas | Challenge 15</title>
 </head>
 
