--- a/index-23.html
+++ b/index-23.html
@@ -15,6 +15,7 @@
     /> 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/style-23.css">
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.png">
     <title>JavaScriptmas | Challenge 23</title>
 </head>
 
