--- a/index-24.html
+++ b/index-24.html
@@ -15,6 +15,7 @@
     /> 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/style-24.css">
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.png">
     <title>JavaScriptmas | Challenge 24</title>
 </head>
 
