--- a/index-1.html
+++ b/index-1.html
@@ -15,6 +15,7 @@
     crossorigin="anonymous"
     />  
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.png">
     <title>JavaScriptmas | Challenge 1</title>
 </head>
 
