--- a/index-6.html
+++ b/index-6.html
@@ -14,6 +14,7 @@
     crossorigin="anonymous"
     /> 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.png">
     <title>JavaScriptmas | Challenge 6</title>
 </head>
 
